assets/css/styles.css
/*-------------
 	General
-------------*/
@import url('https://fonts.googleapis.com/css?family=Anton&subset=latin-ext');
@import url('https://fonts.googleapis.com/css?family=Lobster');

*{
	margin: 0;
	padding: 0;
	box-sizing: border-box;
}

html{
	font: normal 16px sans-serif;
	color: #555;
	overflow-y: scroll;
  -webkit-overflow-scrolling: touch;
}

body{
	overflow-x: hidden;
}

ul, nav{
	list-style: none;
}

a{
	text-decoration: none;
	color: inherit;
	cursor: pointer;

	opacity: 0.9;
}

a:hover{
	opacity: 1;
}

a.btn{
	color: #fff;
	border-radius: 4px;
	text-transform: uppercase;
	background-color: #FFFFFF;
	font-weight: 800;
	text-align: center;
}

hr{
	width: 150px;
	height: 2px;
	background-color: #FFFFFF;
	border: 0;
	margin-bottom: 80px;
}

section{
	display: flex;
	flex-direction: column;
	align-items: flex-start;

	padding: 120px 100px;
}

section h3.title{
	color: rgb(98, 146, 237);
	text-transform: uppercase;;
	font-style: italic;
	font-size: 48px;
	font-weight: 600;
	margin-bottom: 35px;
	text-align: left;
}

section h2.sub-title{
	color: #414a4f;
	text-transform: capitalize;
	font-size: 32px;
	font-weight: 200;
	margin-top: 12px;
	margin-bottom: 12px;
}

section p{
	max-width: 800px;
	text-align: left;
	margin-bottom: 40px;
	padding: 0 20px;
	line-height: 2;
}

.menu-aside {
	position: fixed;
	padding: 5px 40px 0 20px;
	width: 300px;
	height: 100vh;
	color: rgb(98, 146, 237);
	text-transform: uppercase;;
	font-style: italic;
	font-weight: 600;
	font-size: 40px;
	line-height: 60px;
	background-color: rgba(255, 255, 255, 0.8);
	right: -300px;
	text-align: right;
	z-index: 900;
}

.menu-aside ul li {
	cursor: pointer;
	opacity: 0.8;
	transition: opacity .5s ease;
	z-index: 900;
}
.menu-aside ul li:hover {
	opacity: 1;
}

.menu-aside .close-button {
	cursor: pointer;
	opacity: 0.8;
	transition: opacity .5s ease;
	z-index: 900;
}

.menu-aside .close-button:hover {
	opacity: 1;
}

@media (max-width: 1000px){

	section{
		padding: 100px 50px;
	}

}

@media (max-width: 600px){

	section{
		padding: 80px 30px;
	}

	section h3.title{
		color: rgb(98, 146, 237);
		text-transform: uppercase;;
		font-style: italic;
		font-size: 38px;
		font-weight: 600;
		margin-bottom: 35px;
		text-align: left;
	}

}


/*-------------
 	Header
-------------*/

.floatingHeader {
  position: fixed;
  top: 0;
  visibility: hidden;
	padding: 10px;
	width: 100%;
	box-sizing: border-box;
	background-color: transparent;
	transition: background-color 1.5s ease;
	z-index: 200;
}


@media (max-width: 600px){

	.menu-aside {
		padding: 12px 20px 0 20px;
		font-weight: 600;
		font-size: 30px;
		line-height: 50px;
		width: 200px;

	}

	.menu-aside i {
		font-size: 35px;
	}

	.floatingHeader {
		transition: none !important;;
	}

}



/*----------------
 	Home Section
----------------*/

.home-section{
	padding: 0;
	position: relative;
	justify-content: space-between;;
	min-height: 100vh;
	text-align: left;
	align-items: center;
}

.home-section .background-image{
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	background-size: cover;
	background-color: #FFFFFF;
	z-index: -1;
	opacity: 0.8;
}

.home-section .background-image:after{
	content: '';
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	background-color: #000000;
	opacity: 0.30;
}

.home-splash-container {
	width: 100%;
	justify-content: center;
}

.home-section .home-menu-container {
	width: 100%;
	display: flex;
	justify-content: flex-end;

}

.home-section .home-menu-container .menu {
	width: 200px;
	color: white;
	font-size: 35px;
	padding: 17.5px 40px;
}

.home-section .home-menu-container .menu i {
	float: right;
	opacity: 0.8;
	transition: opacity	.5s ease;
	cursor: pointer;
}

.home-section .home-menu-container .menu i:hover {
	opacity: 1;
}

.home-section h1{
	margin-bottom: 50px;
}

.home-section .logo-splash {
	color: white;
	text-align: center;
}

.home-section .logo-splash h1 {
	font-size: 100px;
	line-height: 50px;
	font-weight: 100;
	color: white;
	text-align: center;
	font-family: 'Lobster', cursive;
}

.home-section .logo-splash h3 {
	font-size: 40px;
	font-weight: 200;
	color: white;
	text-align: center;
	font-family: 'Lobster', cursive;
	margin: 80px 0 50px 0;
}

.home-section a.btn {
	background-color: rgb(98, 146, 237);
	padding: 16px 40px;
	color: white;
}

.home-section .contact-options {
	transition: opacity 0.8s ease;
	opacity: 0;
	visibility: hidden;
	margin-top: 20px;
	display: flex;
	justify-content: center;
	width: 100%;
	background-color: rgba(255, 255, 255, .5);
	text-align: center;
}

.home-section ul{
	display: flex;
	margin: 15px 0;
	font-size: 32px;
	color: rgb(98, 146, 237);
	font-size: 50px;
}

.home-section ul li{
	margin: 0 8px;
}

.home-section ul li:first-child{
	margin-left: 0;
}

.home-section ul li:last-child{
	margin-right: 0;
}

.home-section .get-in-touch {
	width: 100%;
	display: flex;
	justify-content: space-between;
}

.home-section .get-in-touch > * {
	width: 200px;
}

.home-section .get-in-touch .menu {
	color: rgb(98, 146, 237);
	padding: 7.5px 30px;
	visibility: hidden;
	opacity: 0;
	transition: opacity 1.5s ease;
}

.home-section .get-in-touch .menu i {
	float: right;
	cursor: pointer;
	font-size: 35px;
}

.home-section .get-in-touch .logo {
	padding-left: 30px;
	visibility: hidden;
	opacity: 0;
	transition: opacity 1.5s ease;
}

.home-section .get-in-touch .logo img {
	height: 50px;
	cursor: pointer;
}
/* ... */

